# Compiler

./: CMakeLists.txt  lexer.h  main.cpp  temp.in
.github/workflows/: cmake-tests.yml
AST/node/: Literal_Type.h  basic.cpp  basic.h  expression.h  patterns.h
parser/: parser.cpp  parser.h
samples/: temp.rs
src/: lexer.h  main.cpp
src/AST/node/: basic.cpp  basic.h  parser_type.h
src/parser/: parser.cpp  parser.h
src/semantic/: semantic_analyzer.cpp  semantic_analyzer.h
testcases/: CMakeLists.txt  auto-crawl.py  test.cpp
testcases/basic/: basic1.txt  basic10.txt  basic11.txt  basic13.txt  basic14.txt  basic15.txt  basic16.txt  basic17.txt  basic18.txt  basic19.txt  basic2.txt  basic20.txt  basic21.txt  basic22.txt  basic23.txt  basic24.txt  basic25.txt  basic26.txt  basic27.txt  basic29.txt  basic3.txt  basic30.txt  basic31.txt  basic32.txt  basic33.txt  basic34.txt  basic35.txt  basic36.txt  basic37.txt  basic38.txt  basic39.txt  basic4.txt  basic40.txt  basic5.txt  basic6.txt  basic7.txt  basic8.txt  basic9.txt
testcases/expr/: expr1.txt  expr10.txt  expr11.txt  expr13.txt  expr14.txt  expr15.txt  expr16.txt  expr17.txt  expr18.txt  expr19.txt  expr2.txt  expr20.txt  expr21.txt  expr22.txt  expr23.txt  expr24.txt  expr25.txt  expr26.txt  expr27.txt  expr28.txt  expr29.txt  expr3.txt  expr30.txt  expr31.txt  expr32.txt  expr33.txt  expr34.txt  expr35.txt  expr36.txt  expr37.txt  expr38.txt  expr39.txt  expr4.txt  expr40.txt  expr5.txt  expr6.txt  expr7.txt  expr8.txt  expr9.txt
testcases/if/: if4.txt
testcases/return/: return10.txt  return11.txt  return12.txt  return13.txt  return14.txt  return15.txt  return5.txt  return6.txt  return8.txt  return9.txt
testcases/testcases/: basic21.in  comprehensive30.in  expr36.in
testcases/type/: type1.txt  type10.txt  type11.txt  type12.txt  type13.txt  type14.txt  type15.txt  type16.txt  type17.txt  type18.txt  type19.txt  type2.txt  type20.txt  type3.txt  type4.txt  type5.txt  type6.txt  type7.txt  type8.txt  type9.txt
